# Taiji-viz

./: .gitignore  README.md  TODO.md  build.sh
client/: TaijiViz-client.cabal  index.html  stack.yaml
client/app/: Main.hs
client/app/TaijiViz/Client/: Functions.hs  Message.hs  Types.hs  UI.hs  Workflow.hs
client/app/TaijiViz/Client/UI/: Header.hs  Home.hs  MessageBoard.hs  Result.hs  Sidebar.hs
client/app/TaijiViz/Client/UI/Home/: Menu.hs
client/app/TaijiViz/Client/UI/Home/Menu/: Config.hs
client/app/TaijiViz/Client/UI/Result/: Config.hs  Table.hs
client/static/: index.css
common/: TaijiViz-common.cabal
common/src/TaijiViz/Common/: Types.hs
server/: TaijiViz-server.cabal  stack.yaml
server/app/: Control.hs  Main.hs  Types.hs
server/app/TaijiViz/Server/: Files.hs  Http.hs  Socket.hs  Types.hs  Workflow.hs
server/data/: index.css  index.html
