name:                TaijiViz-client
version:             0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ghcjs#readme
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          example@example.com
copyright:           2017 Kai Zhang
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable taiji-viz-client
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -dedupe

  other-modules:       TaijiViz.Client.Message
                       TaijiViz.Client.Functions
                       TaijiViz.Client.Types
                       TaijiViz.Client.Workflow
                       TaijiViz.Client.UI
                       TaijiViz.Client.UI.Sidebar
                       TaijiViz.Client.UI.Home
                       TaijiViz.Client.UI.Result
                       TaijiViz.Client.UI.Result.Config

  build-depends:
      base
    , TaijiViz-common
    , aeson
    , bytestring
    , binary
    , containers
    , data-default
    , ghcjs-dom-jsffi
    , fgl
    , ghcjs-base
    , lens
    , matrices>=0.4.5
    , reflex-dom
    , reflex-dom-contrib
    , reflex-dom-semui
    , transformers
    , text
    , unordered-containers
    , statistics
    , SciFlow
    , vector
  default-language:    Haskell2010
