name:                TaijiViz-server
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          example@example.com
copyright:           2017 Kai Zhang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable taiji-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TaijiViz-common
                     , bytestring
                     , binary
                     , cereal
                     , containers
                     , graphviz
                     , fgl
                     , process
                     , shelly
                     , SciFlow
                     , text
                     , websockets

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/server
