name:                TaijiViz-server
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Kai Zhang
maintainer:          example@example.com
copyright:           2017 Kai Zhang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable taiji-viz
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -optl-static -optc-static -optl-pthread

  other-modules:       TaijiViz.Server.Types
                       TaijiViz.Server.Workflow

  build-depends:       base
                     , TaijiViz-common
                     , bytestring
                     , binary
                     , conduit-combinators
                     , cereal
                     , containers
                     , graphviz
                     , fgl
                     , file-embed
                     , http-types
                     , process
                     , shelly
                     , SciFlow
                     , text
                     , websockets
                     , wai
                     , warp
                     , wai-websockets

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/server
